--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "auth0-js": "^9.5.1",
     "bcrypt": "^2.0.1",
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "~1.18.2",
     "connect-flash": "^0.1.1",
@@ -19,6 +20,7 @@
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^1.0.0",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.3.0",
     "jwks-rsa": "^1.2.1",
     "mongoose": "^5.0.5",
     "mongoose-paginate": "^5.0.3",
