--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
-    "express-jwt": "^5.3.1",
+    //"express-jwt": "^5.3.1",
     "express-jwt-authz": "^1.0.0",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.3.0",
